# OpenXR_unified

./: CMakeLists.txt  Readme.md  main.c  make_simple_example.ps1  time_tracker.h
aux/: CMakeLists.txt
aux/math/: CMakeLists.txt
aux/ogl/: CMakeLists.txt
aux/os/: CMakeLists.txt
aux/util/: CMakeLists.txt  u_pacing_app.c
aux/vk/: CMakeLists.txt  vk_helpers.h
comp/: CMakeLists.txt
comp/client/: comp_egl_client.c
include/openxr_includes/: XR_MNDX_ball_on_a_stick_controller.h  XR_MNDX_hydra.h  XR_MNDX_system_buttons.h  openxr.h  openxr_platform.h
include/xrt/: CMakeLists.txt  xrt_compositor.h  xrt_openxr_includes.h  xrt_vulkan_includes.h
ipc/: CMakeLists.txt
ipc/client/: ipc_client_connection.c  ipc_client_instance.c
openxr_app/: CMakeLists.txt  target.c
oxr/: CMakeLists.txt  oxr_api_funcs.h  oxr_api_instance.c  oxr_input_transform.h  oxr_session.c  oxr_session_frame_end.c
